# Summer-Game-Jam

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: main.c
src/math_utils/: matrix.c  matrix.h  vector.c  vector.h
src/shaders/: triangle.frag  triangle.vert
